-Added check for collision between player and game objects -Added power up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(SFML_DIR "SFML-2.5.1/lib/cmake/SFML")
 find_package(SFML 2.5.1 COMPONENTS system window graphics audio REQUIRED)
 
 
-add_executable(EndlessRunner main.cpp Yoshi.cpp Yoshi.h Map.cpp Map.h CONSTANTS.h Obstacle.cpp Obstacle.h ObstacleFactory.cpp ObstacleFactory.h)
+add_executable(EndlessRunner main.cpp Player.cpp Player.h Map.cpp Map.h CONSTANTS.h Obstacle.cpp Obstacle.h ObstacleFactory.cpp ObstacleFactory.h Game.cpp Game.h)
 target_link_libraries(EndlessRunner sfml-system sfml-window sfml-graphics sfml-audio)
