--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(SFML_DIR "SFML-2.5.1/lib/cmake/SFML")
 find_package(SFML 2.5.1 COMPONENTS system window graphics audio REQUIRED)
 
 
-add_executable(EndlessRunner main.cpp Player.cpp Player.h Map.cpp Map.h CONSTANTS.h Obstacle.cpp Obstacle.h ObstacleFactory.cpp ObstacleFactory.h Game.cpp Game.h Observer.cpp Observer.h Achievement.cpp Achievement.h Subject.cpp Subject.h)
+add_executable(EndlessRunner main.cpp Player.cpp Player.h Map.cpp Map.h CONSTANTS.h Obstacle.cpp Obstacle.h ObstacleFactory.cpp ObstacleFactory.h Game.cpp Game.h Observer.h Achievement.cpp Achievement.h Subject.cpp Subject.h State.h StateGame.cpp StateGame.h StateMainMenu.cpp StateMainMenu.h StateGameOver.cpp StateGameOver.h)
 target_link_libraries(EndlessRunner sfml-system sfml-window sfml-graphics sfml-audio)
