--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -5,8 +5,9 @@ project(Google_tests)
 add_subdirectory(GoogleTests)
 find_package(GTest)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/cmake-build-debug)
 
 # 'Google_Tests_run' is the target name
 # 'test1.cpp tests2.cpp' are source files with tests
 add_executable(runAllTests main.cpp test1.cpp)
-target_link_libraries(runAllTests gtest gtest_main core)
+target_link_libraries(runAllTests gtest  gtest_main core)
